Отправка на первое ревью1

--- a/index.html
+++ b/index.html
@@ -1,155 +1,229 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/Users/Ласточка/how-to-learn/styles/normalize.css">
-  <link rel="stylesheet" href="/Users/Ласточка/how-to-learn/styles/style.css">  
-  <title>Научиться учиться</title>
-</head>
-<body>
-  <div class="page">
-    <header class="header">
-      <div class="logo logo_place_header logo_key_value">
-        
-      </div>
-      <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a href="" class="header__link">Узнать →</a></p>
-      <image class="header__main-illustration header__main-illustration-size" src="/Users/Ласточка/how-to-learn/images/header-image.png" alt="Иллюстрация">
-      <div class="header__square-pic"></div>
-    </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="/Users/Ласточка/how-to-learn/styles/normalize.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/Users/Ласточка/how-to-learn/styles/style.css"
+    />
+    <title>Научиться учиться</title>
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <div class="logo logo_place_header logo_key_value"></div>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">
+          Какие современные и эффективные подходы к обучению вы можете
+          использовать в своей жизни?
+          <a href="" class="header__link">Узнать →</a>
+        </p>
+        <image
+          class="header__main-illustration header__main-illustration-size"
+          src="/Users/Ласточка/how-to-learn/images/header-image.png"
+          alt="Иллюстрация"
+        ></image>
+        <div class="header__square-pic"></div>
+      </header>
 
-   <main>
-      <section class="description">
-        <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
-          <div class="main-text">
-            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+      <main>
+        <section class="description">
+          <div class="two-columns">
+            <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+            <div class="main-text">
+              <p class="two-columns__paragraph">
+                Ни в школе, ни в институте нас не учат тому, как правильно
+                изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
+                тренируемся решать однообразные задачи, чтобы лучше сдать тест,
+                но часто в итоге это не дает нам реального знания. Зубрежка
+                быстро выветривается и не приносит пользы.
+              </p>
+              <p class="two-columns__paragraph">
+                <span class="two-columns__span-accent">Вывод:</span>учиться тоже
+                нужно уметь, но почему-то этому мало где учат. Что с этим
+                делать?
+              </p>
+              <p class="two-columns__paragraph">
+                Конкретные техники и упражнения помогают изменить подход к
+                обучению, сделать его эффективным и захватывающим. Эти же
+                техники применяются на примере обучения в Практикуме.
+              </p>
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="digits">
-        <h2 class="section-title">Цифры и факты</h2>
-        <p class="section-subtitle">Про учёбу и мозг</p>
-        <div class="table">
-          <div class="table__cell">
-            <h3 class="table__heading">86 миллиардов</h3>
-            <p class="table__text">Число нейронов в мозге человека</p>
-          </div>   
-          <div class="table__cell">
-            <h3 class="table__heading">2.1 миллиарда</h3>
-            <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text">Всемирный Банк, 2017</p>
+        <section class="digits">
+          <h2 class="section-title">Цифры и факты</h2>
+          <p class="section-subtitle">Про учёбу и мозг</p>
+          <div class="table">
+            <div class="table__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">2.1 миллиарда</h3>
+              <p class="table__text">
+                Число нуждающихся в повышении квалификации
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объём памяти человека</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__text">
+                Число ответственных за обучение нервных синапсов у взрослого
+                человека
+              </p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__text">
+                Число взрослых людей моложе 25 лет, не имеющих образования для
+                трудоустройства
+              </p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">17–20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </div>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">1000 терабайт</h3>
-            <p class="table__text">Объём памяти человека</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">500 триллионов</h3>
-            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">420 миллионов</h3>
-            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-            <p class="table__text">Всемирный Банк, 2017</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">17–20 лет</h3>
-            <p class="table__text">Пик обучаемости</p>
-          </div>
-          <div class="table__cell">
-            <h3 class="table__heading">1885 год</h3>
-            <p class="table__text">Открытие кривой забывания</p>
-          </div>
-        <div class="table__cell">
-            <h3 class="table__heading">1889 год</h3>
-            <p class="table__text">Открытие условного рефлекса</p>     
-        </div>
-      </div>
-      </section>
+        </section>
 
-      <section class="feynman">
-        <h1 class="feynman__title">Метод Фейнмана</h1>
-        <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="" class="feynman__link">Подробнее →</a>
-      </section>
+        <section class="feynman">
+          <h1 class="feynman__title">Метод Фейнмана</h1>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="" class="feynman__link">Подробнее →</a>
+        </section>
 
-     <section class="kaufman">
-        <h2 class="section-title theme-dark">Принципы обучения</h2>
-        <p class="section-subtitle theme-dark">от Джоша Кауфмана</p>
-        <div class="table theme-dark">
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading table__heading_theme-dark">1</h3>
-            <p class="table__text theme-dark">Выберите привлекательный проект.</p>
+        <section class="kaufman">
+          <h2 class="section-title theme-dark">Принципы обучения</h2>
+          <p class="section-subtitle theme-dark">от Джоша Кауфмана</p>
+          <div class="table theme-dark">
+            <div class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading table__heading_theme-dark">1</h3>
+              <p class="table__text theme-dark">
+                Выберите привлекательный проект.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading theme-dark">2</h3>
+              <p class="table__text theme-dark">
+                Сосредоточьтесь на каком-то одном навыке.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading theme-dark">3</h3>
+              <p class="table__text theme-dark">
+                Определите целевой уровень мастерства.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading theme-dark">4</h3>
+              <p class="table__text theme-dark">Разбейте навык на элементы.</p>
+            </div>
+            <div class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading theme-dark">5</h3>
+              <p class="table__text">
+                Приготовьте всё необходимое для занятий.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading table__cell_theme-dark">6</h3>
+              <p class="table__text theme-dark">
+                Устраните препятствия для занятий.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading theme-dark">7</h3>
+              <p class="table__text theme-dark">
+                Выделите специальное время для занятий.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading theme-dark">8</h3>
+              <p class="table__text theme-dark">
+                Создайте быстрые петли обратной связи.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading theme-dark">9</h3>
+              <p class="table__text theme-dark">
+                Занимайтесь по расписанию, короткими интенсивными интервалами.
+              </p>
+            </div>
+            <div class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading theme-dark">10</h3>
+              <p class="table__text theme-dark">
+                Уделяйте внимание количеству и скорости.
+              </p>
+            </div>
           </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading theme-dark">2</h3>
-            <p class="table__text theme-dark">Сосредоточьтесь на каком-то одном навыке.</p>
-          </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading theme-dark">3</h3>
-            <p class="table__text theme-dark">Определите целевой уровень мастерства.</p>
-          </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading theme-dark">4</h3>
-            <p class="table__text theme-dark">Разбейте навык на элементы.</p>
-          </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading theme-dark">5</h3>
-            <p class="table__text">Приготовьте всё необходимое для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading table__cell_theme-dark">6</h3>
-            <p class="table__text theme-dark">Устраните препятствия для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading theme-dark">7</h3>
-            <p class="table__text theme-dark">Выделите специальное время для занятий.</p>
-          </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading theme-dark">8</h3>
-            <p class="table__text theme-dark">Создайте быстрые петли обратной связи.</p>
-          </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading theme-dark">9</h3>
-            <p class="table__text theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
-          </div>
-          <div class="table__cell table__cell_theme-dark">
-            <h3 class="table__heading theme-dark">10</h3>
-            <p class="table__text theme-dark">Уделяйте внимание количеству и скорости.</p>
-          </div>   
-        </div>
-        <img class="kaufman__triangle" src="/Users/Ласточка/how-to-learn/images/kaufman-triangle.svg" alt="Треугольник">
-      </section>
+          <image
+            class="kaufman__triangle"
+            src="/Users/Ласточка/how-to-learn/images/kaufman-triangle.svg"
+            alt="Треугольник"
+          ></image>
+        </section>
+      </main>
 
-    </main>
-
-    <footer class="footer">
-      <div class="footer__columns">
-        <div class="footer__column_content-copyright">
-          <div class="logo logo_place_footer logo_key_value">       
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column_content-copyright">
+            <div class="logo logo_place_footer logo_key_value"></div>
+            <p class="footer__author">&copy; Надежда Телепенина</p>
           </div>
-          <p class="footer__author">&copy; Надежда Телепенина</p>
-        </div>
-        <div class="footer__column_content-info">
-          <p class="footer__column-heading">О Практикуме</p>
-          <a href="" class="footer__column-link">Главная</a>
-          <a href="" class="footer__column-link">Концепция</a>
+          <div class="footer__column_content-info">
+            <p class="footer__column-heading">О Практикуме</p>
+            <a href="" class="footer__column-link">Главная</a>
+            <a href="" class="footer__column-link">Концепция</a>
             <a href="" class="footer__column-link">Наставники</a>
+          </div>
+          <div class="footer__column_content-social">
+            <p class="footer__column-heading">Соцсети</p>
+            <a href="" class="footer__column-link"
+              ><image
+                class="footer__column-icon"
+                src="/Users/Ласточка/how-to-learn//images/youtube-icon.svg"
+                alt="Иконка YouTube"
+              ></image
+              >YouTube</a
+            >
+            <a href="" class="footer__column-link"
+              ><image
+                class="footer__column-icon"
+                src="/Users/Ласточка/how-to-learn//images/vk_color_white.svg"
+                alt="Иконка ВКонтакте"
+              ></image
+              >ВКонтакте</a
+            >
+            <a href="" class="footer__column-link"
+              ><image
+                class="footer__column-icon"
+                src="/Users/Ласточка/how-to-learn//images/tiktok-icon.svg"
+                alt="Иконка TikTok"
+              ></image
+              >TikTok</a
+            >
+          </div>
         </div>
-        <div class="footer__column_content-social">
-          <p class="footer__column-heading">Соцсети</p>
-          <a href="" class="footer__column-link"><image class="footer__column-icon" src="/Users/Ласточка/how-to-learn//images/youtube-icon.svg" alt="Иконка YouTube">YouTube</a>
-          <a href="" class="footer__column-link"><image class="footer__column-icon" src="/Users/Ласточка/how-to-learn//images/vk_color_white.svg" alt="Иконка ВКонтакте">ВКонтакте</a>
-          <a href="" class="footer__column-link"><image class="footer__column-icon" src="/Users/Ласточка/how-to-learn//images/tiktok-icon.svg" alt="Иконка TikTok">TikTok</a>
-        </div>
-      </div>
-    </footer>
-
-  </div>
-</body>
+      </footer>
+    </div>
+  </body>
 </html>
