--- a/index.html
+++ b/index.html
@@ -3,14 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://github.com/hope-208/how-to-learn/blob/main/styles/normalize.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://github.com/hope-208/how-to-learn/blob/main/styles/style.css"
-    />
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Научиться учиться</title>
   </head>
   <body>
@@ -25,7 +19,7 @@
         </p>
         <image
           class="header__main-illustration header__main-illustration-size"
-          src="https://github.com/hope-208/how-to-learn/blob/main/images/header-image.png"
+          src="images/header-image.png"
           alt="Иллюстрация"
         ></image>
         <div class="header__square-pic"></div>
@@ -177,7 +171,7 @@
           </div>
           <image
             class="kaufman__triangle"
-            src="https://github.com/hope-208/how-to-learn/blob/main/images/kaufman-triangle.svg"
+            src="images/kaufman-triangle.svg"
             alt="Треугольник"
           ></image>
         </section>
@@ -200,7 +194,7 @@
             <a href="" class="footer__column-link"
               ><image
                 class="footer__column-icon"
-                src="https://github.com/hope-208/how-to-learn/blob/main/images/youtube-icon.svg"
+                src="images/youtube-icon.svg"
                 alt="Иконка YouTube"
               ></image
               >YouTube</a
@@ -208,7 +202,7 @@
             <a href="" class="footer__column-link"
               ><image
                 class="footer__column-icon"
-                src="https://github.com/hope-208/how-to-learn/blob/main/images/vk_color_white.svg"
+                src="images/vk_color_white.svg"
                 alt="Иконка ВКонтакте"
               ></image
               >ВКонтакте</a
@@ -216,7 +210,7 @@
             <a href="" class="footer__column-link"
               ><image
                 class="footer__column-icon"
-                src="https://github.com/hope-208/how-to-learn/blob/main/images/tiktok-icon.svg"
+                src="images/tiktok-icon.svg"
                 alt="Иконка TikTok"
               ></image
               >TikTok</a
