Проверка устранения замечаний после ревью

--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
   <body>
     <div class="page">
       <header class="header">
-        <div class="logo logo_place_header logo_key_value"></div>
+        <div class="logo logo_place_header"></div>
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">
           Какие современные и эффективные подходы к обучению вы можете
           использовать в своей жизни?
           <a href="" class="header__link">Узнать →</a>
         </p>
-        <image
-          class="header__main-illustration header__main-illustration-size"
+        <img
+          class="header__main-illustration"
           src="images/header-image.png"
           alt="Иллюстрация"
-        ></image>
+        />
         <div class="header__square-pic"></div>
       </header>
 
       <main>
         <section class="description">
           <div class="two-columns">
-            <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
-            <div class="main-text">
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
                 Ни в школе, ни в институте нас не учат тому, как правильно
                 изучать материал. Мы готовимся к экзаменам и учим билеты. Мы
@@ -54,166 +54,168 @@
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
           <p class="section-subtitle">Про учёбу и мозг</p>
-          <div class="table">
-            <div class="table__cell">
+          <ul class="table">
+            <li class="table__cell">
               <h3 class="table__heading">86 миллиардов</h3>
               <p class="table__text">Число нейронов в мозге человека</p>
-            </div>
-            <div class="table__cell">
+            </li>
+            <li class="table__cell">
               <h3 class="table__heading">2.1 миллиарда</h3>
               <p class="table__text">
                 Число нуждающихся в повышении квалификации
               </p>
               <p class="table__text">Всемирный Банк, 2017</p>
-            </div>
-            <div class="table__cell">
+            </li>
+            <li class="table__cell">
               <h3 class="table__heading">1000 терабайт</h3>
               <p class="table__text">Объём памяти человека</p>
-            </div>
-            <div class="table__cell">
+            </li>
+            <li class="table__cell">
               <h3 class="table__heading">500 триллионов</h3>
               <p class="table__text">
                 Число ответственных за обучение нервных синапсов у взрослого
                 человека
               </p>
-            </div>
-            <div class="table__cell">
+            </li>
+            <li class="table__cell">
               <h3 class="table__heading">420 миллионов</h3>
               <p class="table__text">
                 Число взрослых людей моложе 25 лет, не имеющих образования для
                 трудоустройства
               </p>
               <p class="table__text">Всемирный Банк, 2017</p>
-            </div>
-            <div class="table__cell">
+            </li>
+            <li class="table__cell">
               <h3 class="table__heading">17–20 лет</h3>
               <p class="table__text">Пик обучаемости</p>
-            </div>
-            <div class="table__cell">
+            </li>
+            <li class="table__cell">
               <h3 class="table__heading">1885 год</h3>
               <p class="table__text">Открытие кривой забывания</p>
-            </div>
-            <div class="table__cell">
+            </li>
+            <li class="table__cell">
               <h3 class="table__heading">1889 год</h3>
               <p class="table__text">Открытие условного рефлекса</p>
-            </div>
-          </div>
+            </li>
+          </ul>
         </section>
 
         <section class="feynman">
-          <h1 class="feynman__title">Метод Фейнмана</h1>
+          <h2 class="feynman__title">Метод Фейнмана</h2>
           <p class="feynman__subtitle">Выучить и не забыть.</p>
           <a href="" class="feynman__link">Подробнее →</a>
         </section>
 
         <section class="kaufman">
-          <h2 class="section-title theme-dark">Принципы обучения</h2>
-          <p class="section-subtitle theme-dark">от Джоша Кауфмана</p>
-          <div class="table theme-dark">
-            <div class="table__cell table__cell_theme-dark">
+          <h2 class="section-title section-title_theme-dark">
+            Принципы обучения
+          </h2>
+          <p class="section-subtitle section-subtitle_theme-dark">
+            от Джоша Кауфмана
+          </p>
+          <ul class="table table_theme-dark">
+            <li class="table__cell table__cell_theme-dark">
               <h3 class="table__heading table__heading_theme-dark">1</h3>
-              <p class="table__text theme-dark">
+              <p class="table__text table__text_theme-dark">
                 Выберите привлекательный проект.
               </p>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
-              <h3 class="table__heading theme-dark">2</h3>
-              <p class="table__text theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading table__heading_theme-dark">2</h3>
+              <p class="table__text table__text_theme-dark">
                 Сосредоточьтесь на каком-то одном навыке.
               </p>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
-              <h3 class="table__heading theme-dark">3</h3>
-              <p class="table__text theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading table__heading_theme-dark">3</h3>
+              <p class="table__text table__text_theme-dark">
                 Определите целевой уровень мастерства.
               </p>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
-              <h3 class="table__heading theme-dark">4</h3>
-              <p class="table__text theme-dark">Разбейте навык на элементы.</p>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
-              <h3 class="table__heading theme-dark">5</h3>
-              <p class="table__text">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading table__heading_theme-dark">4</h3>
+              <p class="table__text table__text_theme-dark">
+                Разбейте навык на элементы.
+              </p>
+            </li>
+            <li class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading table__heading_theme-dark">5</h3>
+              <p class="table__text table__text_theme-dark">
                 Приготовьте всё необходимое для занятий.
               </p>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
-              <h3 class="table__heading table__cell_theme-dark">6</h3>
-              <p class="table__text theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading table__heading_theme-dark">6</h3>
+              <p class="table__text table__text_theme-dark">
                 Устраните препятствия для занятий.
               </p>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
-              <h3 class="table__heading theme-dark">7</h3>
-              <p class="table__text theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading table__heading_theme-dark">7</h3>
+              <p class="table__text table__text_theme-dark">
                 Выделите специальное время для занятий.
               </p>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
-              <h3 class="table__heading theme-dark">8</h3>
-              <p class="table__text theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading table__heading_theme-dark">8</h3>
+              <p class="table__text table__text_theme-dark">
                 Создайте быстрые петли обратной связи.
               </p>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
-              <h3 class="table__heading theme-dark">9</h3>
-              <p class="table__text theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading table__heading_theme-dark">9</h3>
+              <p class="table__text table__text_theme-dark">
                 Занимайтесь по расписанию, короткими интенсивными интервалами.
               </p>
-            </div>
-            <div class="table__cell table__cell_theme-dark">
-              <h3 class="table__heading theme-dark">10</h3>
-              <p class="table__text theme-dark">
+            </li>
+            <li class="table__cell table__cell_theme-dark">
+              <h3 class="table__heading table__heading_theme-dark">10</h3>
+              <p class="table__text table__text_theme-dark">
                 Уделяйте внимание количеству и скорости.
               </p>
-            </div>
-          </div>
-          <image
-            class="kaufman__triangle"
-            src="images/kaufman-triangle.svg"
-            alt="Треугольник"
-          ></image>
+            </li>
+          </ul>
+          <div class="kaufman__triangle"></div>
         </section>
       </main>
 
       <footer class="footer">
-        <div class="footer__columns">
-          <div class="footer__column_content-copyright">
-            <div class="logo logo_place_footer logo_key_value"></div>
+        <div class="footer__column">
+          <div class="footer__column footer__column_content-copyright">
+            <div class="logo logo_place_footer"></div>
             <p class="footer__author">&copy; Надежда Телепенина</p>
           </div>
-          <div class="footer__column_content-info">
-            <p class="footer__column-heading">О Практикуме</p>
+          <nav class="footer__column footer__column_content-info">
+            <h3 class="footer__column-heading">О Практикуме</h3>
             <a href="" class="footer__column-link">Главная</a>
             <a href="" class="footer__column-link">Концепция</a>
             <a href="" class="footer__column-link">Наставники</a>
-          </div>
-          <div class="footer__column_content-social">
-            <p class="footer__column-heading">Соцсети</p>
+          </nav>
+          <div class="footer__column footer__column_content-social">
+            <h3 class="footer__column-heading">Соцсети</h3>
             <a href="" class="footer__column-link"
-              ><image
-                class="footer__column-icon"
+              ><img
+                class="footer__social-icon"
                 src="images/youtube-icon.svg"
                 alt="Иконка YouTube"
-              ></image
-              >YouTube</a
+              />
+              YouTube</a
             >
             <a href="" class="footer__column-link"
-              ><image
-                class="footer__column-icon"
+              ><img
+                class="footer__social-icon"
                 src="images/vk_color_white.svg"
                 alt="Иконка ВКонтакте"
-              ></image
-              >ВКонтакте</a
+              />
+              ВКонтакте</a
             >
             <a href="" class="footer__column-link"
-              ><image
-                class="footer__column-icon"
+              ><img
+                class="footer__social-icon"
                 src="images/tiktok-icon.svg"
                 alt="Иконка TikTok"
-              ></image
-              >TikTok</a
+              />
+              TikTok</a
             >
           </div>
         </div>
