--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="vendor/normalize.css" />
-    <link rel="stylesheet" href="page/page.css" />
+    <link rel="stylesheet" href="page/index.css" />
     <title>Научиться учиться</title>
   </head>
   <body>
@@ -71,7 +71,7 @@
               <img
                 class="cards__image"
                 src="images/cards-recall.png"
-                alt="Recall"
+                alt="Отзыв"
               />
               <h3 class="cards__title">Recall</h3>
               <p class="cards__description">
@@ -122,26 +122,26 @@
           <h2 class="section-title">Видео нa TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
-            <iframe
-              class="video__iframe"
-              id="ytplayer"
-              type="text/html"
-              width="515"
-              height="316"
-              src="https://www.youtube.com/embed/arj7oStGLkU"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
-            <iframe
-              class="video__iframe"
-              id="ytplayer"
-              type="text/html"
-              width="515"
-              height="316"
-              src="https://www.youtube.com/embed/5MgBikgcWnY"
-              frameborder="0"
-              allowfullscreen
-            ></iframe>
+            <div>
+              <iframe          
+              class="video__iframe" 
+              id="ytplayer" 
+                type="text/html"
+                src="https://www.youtube.com/embed/5MgBikgcWnY"
+                title="Первые 20 часов - как чему-то научиться | Джош Кауфман | TEDxCSU" 
+                allowfullscreen
+              ></iframe>
+              </div>
+            <div>
+              <iframe
+              class="video__iframe" 
+              id="ytplayer" 
+                type="text/html" 
+                src="https://www.youtube.com/embed/arj7oStGLkU"
+                title="Тим Урбан: В сознании мастера-прокрастинатора | ТЕД" 
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
         </section>
 
@@ -155,18 +155,10 @@
               </div>
         </section>
 
-        <section class="khan">
-        <div class="khan__container">
-            <p class="khan__autor">Салман Хан</p>
-            <h2 class="khan__title">Весь мир — школа</h2>
-            <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
-            <p class="khan__quote-author">Джордж Лукас</p>
-            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
-            <div class="khan__book-container">
-              <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка книги">
-              <a href=""class="khan__buy-link">Купить книгу →</a>
-            </div>
-        </div>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a href="#" class="feynman__link">Подробнее →</a>
         </section>
 
         <section class="digits">
@@ -218,11 +210,19 @@
           </ul>
         </section>
 
-        <section class="feynman">
-          <h2 class="feynman__title">Метод Фейнмана</h2>
-          <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a href="" class="feynman__link">Подробнее →</a>
-        </section>
+        <section class="khan">
+          <div class="khan__container">
+              <p class="khan__author">Салман Хан</p>
+              <h2 class="khan__title">Весь мир — школа</h2>
+              <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+              <p class="khan__quote-author">Джордж Лукас</p>
+              <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+              <div class="khan__book-container">
+                  <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка книги">
+                <a href=""class="khan__buy-link">Купить книгу →</a>
+              </div>
+          </div>
+          </section>
 
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">
@@ -297,6 +297,25 @@
         </section>
       </main>
 
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a href="#" class="resources__link">
+            <img src="images/logo/resources-arzamas.svg" alt="Арзамас">
+          </a>
+          <a href="#" class="resources__link">
+            <img src="images/logo/resources-n1.svg" alt="Н+1">
+          </a>
+          <a href="#" class="resources__link">
+            <img src="images/logo/resources-strelka.svg" alt="Стрелка">
+          </a>
+          <a href="#" class="resources__link">
+            <img src="images/logo/resources-polka.svg" alt="ПОЛКА">
+          </a>        
+        </div>        
+      </section>
+
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column footer__column_content_copyright">
@@ -318,7 +337,7 @@
                 ><img
                   class="footer__social-icon"
                   src="images/youtube-icon.svg"
-                  alt="Иконка YouTube"
+                  alt="Иконка Ютуб"
                 />
                 YouTube</a
               >
@@ -334,7 +353,7 @@
                 ><img
                   class="footer__social-icon"
                   src="images/tiktok-icon.svg"
-                  alt="Иконка TikTok"
+                  alt="Иконка ТикТок"
                 />
                 TikTok</a
               >
