--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="vendor/normalize.css" />
-    <link rel="stylesheet" href="page/index.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="vendor/normalize.css">
+    <link rel="stylesheet" href="page/index.css">
     <title>Научиться учиться</title>
   </head>
   <body>
@@ -20,8 +20,7 @@
         <img
           class="header__main-illustration"
           src="images/header-image.png"
-          alt="Иллюстрация"
-        />
+          alt="Иллюстрация">
         <div class="header__square-pic rotation"></div>
       </header>
 
@@ -59,8 +58,7 @@
               <img
                 class="cards__image"
                 src="images/cards-attention.png"
-                alt="Внимание"
-              />
+                alt="Внимание">
               <h3 class="cards__title">Два вида внимания</h3>
               <p class="cards__description">
                 Глубокие знания возникают, если чередовать сфокусированное и
@@ -71,8 +69,7 @@
               <img
                 class="cards__image"
                 src="images/cards-recall.png"
-                alt="Отзыв"
-              />
+                alt="Отзыв">
               <h3 class="cards__title">Recall</h3>
               <p class="cards__description">
                 Вспоминайте изученное — это позволит соединить разрозненные
@@ -83,8 +80,7 @@
               <img
                 class="cards__image"
                 src="images/cards-interliving.png"
-                alt="Интерливинг"
-              />
+                alt="Интерливинг">
               <h3 class="cards__title">Интерливинг</h3>
               <p class="cards__description">
                 Изучайте несколько навыков одновременно, они обогащают друг
@@ -95,8 +91,7 @@
               <img
                 class="cards__image"
                 src="images/cards-question.png"
-                alt="Вопросы"
-              />
+                alt="Вопросы">
               <h3 class="cards__title">Вопросы</h3>
               <p class="cards__description">
                 Слушая преподавателя, придумывайте хороший вопрос, который вас
@@ -107,8 +102,7 @@
               <img
                 class="cards__image"
                 src="images/cards-competence.png"
-                alt="Иллюзия компетентности"
-              />
+                alt="Иллюзия компетентности">
               <h3 class="cards__title">Иллюзия компетентности</h3>
               <p class="cards__description">
                 Повторите про себя, запишите, расскажите другу: вам только
@@ -123,22 +117,18 @@
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
             <div>
-              <iframe          
-              class="video__iframe" 
-              id="ytplayer" 
-                type="text/html"
+              <iframe
+                class="video__iframe"
                 src="https://www.youtube.com/embed/5MgBikgcWnY"
-                title="Первые 20 часов - как чему-то научиться | Джош Кауфман | TEDxCSU" 
+                title="Первые 20 часов - как чему-то научиться | Джош Кауфман | TEDxCSU"
                 allowfullscreen
               ></iframe>
-              </div>
+            </div>
             <div>
               <iframe
-              class="video__iframe" 
-              id="ytplayer" 
-                type="text/html" 
+                class="video__iframe"
                 src="https://www.youtube.com/embed/arj7oStGLkU"
-                title="Тим Урбан: В сознании мастера-прокрастинатора | ТЕД" 
+                title="Тим Урбан: В сознании мастера-прокрастинатора | ТЕД"
                 allowfullscreen
               ></iframe>
             </div>
@@ -146,13 +136,21 @@
         </section>
 
         <section class="oakley">
-        <div class="two-columns">
-          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns">
+            <h2 class="two-columns__brief">История Барбары Оакли.</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
-                С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+                С детства Барбаре не давалась математика. Она считала себя
+                законченным гуманитарием, причём далеко не самым умным. В армии
+                она изучала русский язык, чтобы получить надбавку, да так
+                успешно, что её выдвинули в командиры. Но для продвижения по
+                службе нужно было сдавать математику. И тогда Барбара придумала
+                свой подход к точным наукам. Оказалось, если вам что-то «плохо
+                даётся», ваши добытые трудом знания гораздо глубже, чем у тех,
+                кому всё ясно с первого взгляда.
               </p>
-              </div>
+            </div>
+          </div> 
         </section>
 
         <section class="feynman">
@@ -212,17 +210,26 @@
 
         <section class="khan">
           <div class="khan__container">
-              <p class="khan__author">Салман Хан</p>
-              <h2 class="khan__title">Весь мир — школа</h2>
-              <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
-              <p class="khan__quote-author">Джордж Лукас</p>
-              <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
-              <div class="khan__book-container">
-                  <img class="khan__book-pic" src="images/khan-book.jpg" alt="Обложка книги">
-                <a href=""class="khan__buy-link">Купить книгу →</a>
-              </div>
+            <p class="khan__author">Салман Хан</p>
+            <h2 class="khan__title">Весь мир — школа</h2>
+            <p class="khan__quote">
+              Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать
+              всем, кто занимается образованием — так учащиеся повсюду смогут
+              получить навыки и знания, которые приносят успех в школе, карьере
+              и жизни.
+            </p>
+            <p class="khan__quote-author">Джордж Лукас</p>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+            <div class="khan__book-container">
+              <img
+                class="khan__book-pic"
+                src="images/khan-book.jpg"
+                alt="Обложка книги">
+              <a href="" class="khan__buy-link">Купить книгу →</a>
+            </div>
           </div>
-          </section>
+        </section>
 
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">
@@ -299,7 +306,9 @@
 
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <p class="section-subtitle">
+          Больше материалов о техниках и лайфхаках обучения
+        </p>
         <div class="resources__logo-zone">
           <a href="#" class="resources__link">
             <img src="images/logo/resources-arzamas.svg" alt="Арзамас">
@@ -312,14 +321,15 @@
           </a>
           <a href="#" class="resources__link">
             <img src="images/logo/resources-polka.svg" alt="ПОЛКА">
-          </a>        
-        </div>        
+          </a>
+        </div>
       </section>
 
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column footer__column_content_copyright">
-            <div class="logo logo_place_footer"></div>
+            <div class="logo logo_place_footer">
+            </div>
             <p class="footer__author">&copy; Надежда Телепенина</p>
           </div>
           <nav class="footer__column footer__column_content_info">
@@ -337,26 +347,20 @@
                 ><img
                   class="footer__social-icon"
                   src="images/youtube-icon.svg"
-                  alt="Иконка Ютуб"
-                />
-                YouTube</a
-              >
+                  alt="Иконка Ютуб">
+                YouTube</a>
               <a href="" class="footer__column-link"
                 ><img
                   class="footer__social-icon"
                   src="images/vk_color_white.svg"
-                  alt="Иконка ВКонтакте"
-                />
-                ВКонтакте</a
-              >
+                  alt="Иконка ВКонтакте">
+                ВКонтакте</a>
               <a href="" class="footer__column-link"
                 ><img
                   class="footer__social-icon"
                   src="images/tiktok-icon.svg"
-                  alt="Иконка ТикТок"
-                />
-                TikTok</a
-              >
+                  alt="Иконка ТикТок">
+                TikTok</a>
             </div>
           </div>
         </div>
