--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="vendor/normalize.css">
-    <link rel="stylesheet" href="page/index.css">
+    <link rel="stylesheet" href="pages/index.css">
     <title>Научиться учиться</title>
   </head>
   <body>
@@ -150,7 +149,7 @@
                 кому всё ясно с первого взгляда.
               </p>
             </div>
-          </div> 
+          </div>
         </section>
 
         <section class="feynman">
@@ -300,7 +299,7 @@
               </p>
             </li>
           </ul>
-          <div class="kaufman__triangle"></div>
+          <div class="kaufman__triangle rotation"></div>
         </section>
       </main>
 
@@ -328,8 +327,7 @@
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column footer__column_content_copyright">
-            <div class="logo logo_place_footer">
-            </div>
+            <div class="logo logo_place_footer"></div>
             <p class="footer__author">&copy; Надежда Телепенина</p>
           </div>
           <nav class="footer__column footer__column_content_info">
@@ -348,19 +346,22 @@
                   class="footer__social-icon"
                   src="images/youtube-icon.svg"
                   alt="Иконка Ютуб">
-                YouTube</a>
+                YouTube</a
+              >
               <a href="" class="footer__column-link"
                 ><img
                   class="footer__social-icon"
                   src="images/vk_color_white.svg"
                   alt="Иконка ВКонтакте">
-                ВКонтакте</a>
+                ВКонтакте</a
+              >
               <a href="" class="footer__column-link"
                 ><img
                   class="footer__social-icon"
                   src="images/tiktok-icon.svg"
                   alt="Иконка ТикТок">
-                TikTok</a>
+                TikTok</a
+              >
             </div>
           </div>
         </div>
